fix font align

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -28,6 +28,7 @@
   font-weight: 800;
   line-height: normal;
   margin: 0px;
+  text-align: center;
 }
 .uiuxPTag {
   color: #bc93cf;
@@ -37,6 +38,7 @@
   font-weight: 300;
   line-height: normal;
   margin: 0px;
+  text-align: center;
 }
 
 .descriptionHome {
@@ -172,7 +174,7 @@
 }
 @media screen and (max-width: 400px) {
   .sectionText {
-    width: 400px;
+    width: 100%;
     /* height: 453px; */
     flex-shrink: 0;
     align-items: center;
